# libanaf

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  pyproject.toml  ruff.toml
ai/briefs/: 01-feature-invoice-summary.md  02-feature-products-summary.md  03-discount-handling.md  error_handling.md
conf/: config.toml  logging_py.json
docs/: GPT.md
docs/samples/: 4313345583_4738163791.xml  inv_err-3572424771_4350132691.xml  invoice-3444171368_4277109404.xml
libanaf/: __init__.py  app.py  auth.py  cli.py  comms.py  config.py  exceptions.py  failure_tracker.py  list_invoices.py  notifications.py  types.py  utils.py
libanaf/auth/: __init__.py  client.py  server.py
libanaf/cli/: __init__.py  app.py  auth.py
libanaf/cli/invoices/: __init__.py  download.py  list.py  pdf_render.py  process.py  product_summary.py  show.py  summary.py
libanaf/invoices/: __init__.py  _retry.py  _utils.py  app.py  common.py  download.py  list.py  pdf_render.py  process.py  product_summary.py  query.py  show.py  summary.py
libanaf/ubl/: __init__.py  cac.py  credit_note.py  invoice.py  types.py  ubl_document.py  ubl_types.py  units.py
secrets/: .env.example
tests/: test_auth.py  test_cli_auth.py  test_comms.py  test_config.py  test_credit_note.py  test_discount_distribution.py  test_invoice.py  test_invoices_common.py  test_invoices_show.py  test_invoices_utils.py  test_product_summary.py  test_retries_manual.py  test_summary.py  test_utils.py
tests/fixtures/: credit_note-4710432411.xml  invoice-4249721031_4705345743.xml  invoice-discounts-terra-dent-5770358448_5485396796.xml  invoice-with-fake-discount.xml  test_config.toml
