[tool.poetry]
name = "libanaf"
version = "0.1.0"
description = "ANAF API Authentication Command Line Application"
authors = ["Catalin Trifu <ctrifu@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.scripts]
main = "libanaf.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
typer = "^0.12.3"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
envtoml = "^0.1.2"
flask = "^3.0.3"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"
pyopenssl = "^24.1.0"
authlib = "^1.3.1"
httpx = "^0.27.0"
pydantic-xml = "^2.11.0"
lxml = "^5.2.2"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
