[project]
name = "libanaf"
version = "0.1.0"
description = "ANAF API Authentication Command Line Application"
authors = [
    {name = "Catalin Trifu", email = "ctrifu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "typer>=0.16.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "envtoml>=0.1.2",
    "flask>=3.0.3",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.8",
    "pyopenssl>=24.1.0",
    "authlib>=1.3.1",
    "httpx>=0.27.0",
    "pydantic-xml>=2.11.0",
    "lxml>=5.2.2",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
]

[project.scripts]
main = "libanaf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
